--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,7 @@
-version: '3.4'
-
+version: '3.1'
 services:
-  propertymanagementsystem:
-    image: propertymanagementsystem
-    build:
-      context: .
-      dockerfile: ./Dockerfile
+  API:
+    image: 'pratikmeti/PropertyManagementSystem'
     ports:
       - 8080:8080
     depends_on:
