--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/PropertyManagementSystem
-spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+ 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto= update
+spring.h2.console.enabled=true
+# default path: h2-console
+spring.h2.console.path=/h2-ui
