--- a/sd.yaml
+++ b/sd.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: propertymanagementapplication-prod
+  name: propertymanagement-prod
   labels:
        app: PropertyManagementSystem2
 spec:
@@ -24,7 +24,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: propertyservice
+  name: managementservice
 spec:
   type : NodePort>
   ports:
