--- a/sd.yaml
+++ b/sd.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: wordpress-deployment
+  name: wordpress-deploy
 spec:
   replicas: 1
   selector:
